--- a/Day-3/country.html
+++ b/Day-3/country.html
@@ -1,19 +1,13 @@
+<!DOCTYPE html>
 <html>
 
-<body>
-    <h2><u>countries name</u></h2>
-    <ul>
-        <li>
-            <a href="india.html" target="countries">INDIA</a>
-        </li>
-        <li>
-            <a href="australia.html" target="countries">AUSTRALIA</a>
-        </li>
-        <li>
-            <a href="england.html" target="countries">ENGLAND</a>
-        </li>
-    </ul>
-
-</body>
+<head>
+    <title>Country Information</title>
+</head>
+<frameset cols="30%,70%">
+    <frame src="countries.html" name="countriesFrame">
+        <frame src="country_info.html">
+</frameset>
+<frame name="wikipage">
 
 </html>
