--- a/Assignment/Sourav Kumar Pandab/Day-4/assignment1.html
+++ b/Assignment/Sourav Kumar Pandab/Day-4/assignment1.html
@@ -68,7 +68,7 @@
                 <td>8.</td>
                 <td>Owns:</td>
                 <td>
-                    <input type="radio" name="owns" value="two">Two-wheeler
+                    <input type="radio" name="Owns" value="two">Two-wheeler
                     <input type="radio" name="Owns" value="three">Three-wheeler
                     <input type="radio" name="Owns" value="four">Four-wheeler
                 </td>
