--- a/Assignment/Sourav Kumar Pandab/Day-5/Assignment1.html
+++ b/Assignment/Sourav Kumar Pandab/Day-5/Assignment1.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>assingement-3</title>
+    <title>assingement-1</title>
 </head>
 
 <body>
@@ -16,15 +16,15 @@
             </tr>
             <tr>
                 <th <h1 style="background-color:lightgray;">
-                    </h1> CE</th>
+                    </h1> <button>CE</button></th>
                 <th <h1 style="background-color:lightgray;">
-                    </h1> AC</th>
+                    </h1> <button>AC</button></th>
                 <th <h1 style="background-color:lightgray;">
-                    </h1> M</th>
+                    </h1><button>M</button></th>
                 <th <h1 style="background-color:lightgray;">
-                    </h1> M+</th>
+                    </h1><button>M+</button></th>
                 <th <h1 style="background-color:lightgray;">
-                    </h1>ON</th>
+                    </h1><button>ON</button></th>
             </tr>
             <tr>
                 <th <h1 style="background-color:white;">
@@ -72,7 +72,7 @@
                 <th <h1 style="background-color:lightgray;">
                     </h1>3</th>
                 <th <h1 style="background-color:lightgray;">
-                    </h1>**</th>
+                    </h1></th>
             </tr>
             <tr>
                 <th <h1 style="background-color:white;">
