--- a/Assignment/Ratikanta Mohanthy/Day-5/Assignment1.html
+++ b/Assignment/Ratikanta Mohanthy/Day-5/Assignment1.html
@@ -46,41 +46,43 @@
                 <th colspan="5">&nbsp;</th>
             </tr>
             <tr id="second">
-                <th>CE</th>
-                <th>AC</th>
-                <th>M</th>
-                <th>M+</th>
-                <th>ON</th>
+                <th><button>CE</button></th>
+                <th><button>AC</button></th>
+                <th><button>M</button></th>
+                <th><button>M+</button>
+                </th>
+                <th><button>ON</button></th>
             </tr>
             <tr id="third">
-                <th>SQR</th>
-                <th>LOG</th>
-                <th>AVG</th>
-                <th>%</th>
-                <th>*</th>
+                <th><button>SQR</button></th>
+                <th><button>LOG</button></th>
+                <th><button>AVG</button></th>
+                <th><button>%</button></th>
+                <th><button>*</button></th>
             </tr>
             <tr id="fourth">
-                <th>7</th>
-                <th>8</th>
-                <th>9</th>
-                <th>++</th>
-                <th>-</th>
+                <th><button>7</button></th>
+                <th><button>8</button></th>
+                <th><button>9</button></th>
+                <th><button>++</button></th>
+                <th><button>-</button></th>
             </tr>
             <tr id="fifth">
-                <th>4</th>
-                <th>5</th>
-                <th>6</th>
-                <th>--</th>
+                <th><button>4</button></th>
+                <th><button>5</button></th>
+                <th><button>6</button></th>
+                <th><button>--</button></th>
                 <th rowspan="2">+</th>
             </tr>
             <tr id="sixth">
-                <th>1</th>
-                <th>2</th>
-                <th>3</th>
+                <th><button>1</button></th>
+                <th><button>2</button></th>
+                <th><button>3</button></th>
                 <th></th>
             </tr> 
             <tr id="seventh">
-                <th>.</th>
+                <th><button>.</button>
+                </th>
                 <th colspan="2">0</th>
                 <th colspan="2">=</th>
             </tr>     
