--- a/Assignment/Rakesh Kumar Sahoo/pos project file/firstpage.html
+++ b/Assignment/Rakesh Kumar Sahoo/pos project file/firstpage.html
@@ -110,20 +110,17 @@ button:hover{
 <body>
     <div class="banner">
         <div class="navbar">
-           <img src="who.png" class="logo">
-           <ul>
-            <li><a href="partymaintenance.html">Manufacturer</a></li>
-            <li><a href="">Creditor(Vendor)</a></li>
-            <li><a href="">Debtors(Customer)</a></li>
-            <li><a href="transaction.html">Transaction Type</a></li>
-            <li><a href="stockentry.html">Stock Transaction</a></li>
-            <li><a href="payment.html">Payment</a></li>
-           </ul>
         </div>
         <div class="content">
-            <h1>Stock Management and Party Accounting In MEDICARE</h1>
+            <h1><h1>MEDICARE<br>Login Page</h1></h1>
+
+            <div>
+                <button  onclick="registration()"><span></span>REGISTRATION</button>     
+                  <button onclick="login()"><span></span>LOGIN</button> 
+            </div>
         </div>
     </div>
+    <script src="firstpage.js"></script>
 </body>
 </html>
    
